chore: migrate project from Scala 2.x to Scala 3